Update contributie values.

--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -36,16 +36,17 @@
         </tr>
         <tr>
             <td>Jeugd t/m 17 jaar</td>
-            <td>€138,75</td>
+            <td>€109,60</td>
         </tr>
         <tr>
             <td>Volwassenen v.a. 18 jaar</td>
-            <td>€192,50</td>
+            <td>€194,50</td>
         </tr>
     </table>
 
     <p class="textwidth">
-        Deze prijzen zijn een indicatie, mogelijk zijn deze inmiddels anders.<br>
+        Deze prijzen (inclusief bondscontributie) zijn een indicatie,
+        mogelijk zijn deze inmiddels anders.<br>
         Het is mogelijk om deze contributie in termijnen te betalen.
     </p>
 {% endblock %}
