Move minimum age to contributie table.

--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -7,7 +7,7 @@
 {% block logo-position %}top: -190px; left: 460px;{% endblock %}
 
 {% block body %}
-    <h2>Lidmaatschap (vanaf 12 jaar)</h2>
+    <h2>Lidmaatschap</h2>
 
     <p class="textwidth">
         Wie wil boogschieten bij Geronimo kan eerst gebruik maken van de
@@ -35,7 +35,7 @@
             <th colspan="2" style="text-align: center;">Jaarlijkse contributie</th>
         </tr>
         <tr>
-            <td>Jeugd t/m 17 jaar</td>
+            <td>Jeugd 12 t/m 17 jaar</td>
             <td>€109,60</td>
         </tr>
         <tr>
