--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 1 januari, 2018</p>
+    <p style="font-style: italic;">Per 21 januari, 2018</p>
 
     <ul>
         <li>
@@ -47,8 +47,13 @@
                 <li>Financieel jaarverslag</li>
             </ul>
         </li>
-        <li>Janine van Dijk</li>
-        <li>I. Aarts</li>
+        <li>
+            Janine van Dijk
+            <ul>
+                <li>Activiteitenorganisatie</li>
+                <li>Nieuwsbrief</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Wilt u meer informatie?</h2>
