--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/font-awesome.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/tipTip.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/video.css">
+    <link rel="stylesheet" href="http://arne.delaat.net/static/css/icons.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/controls.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D80.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D90.css">
