Update activiteiten page. Add Koningschieten 2017 results. Add Kerstverschieting verslag. Change koningschieten submenu style.

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -15,9 +15,9 @@
     <h3>2018</h3>
 
     <ul>
-        <li>14 januari, zondag 14:00 - Nieuwjaarsbijeenkomst
         <li>22 januari, maandag 20:00 - Competitieavond
         <li>5 februari, maandag 20:00 - Competitieavond
+        <li>15 februari, donderdag 19:30 - Valentijnsverschieting
         <li>19 februari, maandag 20:00 - Competitieavond
         <li>24 maart, zaterdag 9:00 - Dag van het bestuur
         <li>1 juli, zondag 13:00 - Koningsschieten (buitenveld)
@@ -29,6 +29,7 @@
     <ul>
         <li><a href="{% url '/activiteiten/koningschieten.html' %}">Koningschieten</a></li>
         <li><a href="{% url '/activiteiten/veldschieten.html' %}">Workshop Veldschieten</a></li>
+        <li><a href="{% url '/activiteiten/kerstverschieting.html' %}">Kerstverschieting</a></li>
         <li><a href="{% url '/activiteiten/paasverschieting.html' %}">Paasverschieting</a></li>
         <li><a href="{% url '/activiteiten/sinterkerstnieuwjaarsverschieting.html' %}">SinterKerstNieuwjaarsverschieting</a></li>
     </ul>
