--- a/pages/activiteiten/paasverschieting.html
+++ b/pages/activiteiten/paasverschieting.html
@@ -7,7 +7,7 @@
     <h2>Paasverschieting</h2>
 
     <p class="textwidth">
-        Op zondag 24 april was het eerste paasdag, een mooie dag voor
+        Op zondag 24 april 2012 was het eerste paasdag, een mooie dag voor
         een paasverschieting! En niet zomaar een verschieting, dit keer
         werd er geschoten met zelf gemaakte bogen. Een aantal mensen had
         een prachtige houten boog gemaakt, maar er waren ook bogen van
@@ -23,6 +23,4 @@
         prachtige zingende vogel. De originaliteitsprijs ging naar
         Amanda, voor haar pluchen giraffenboog.
     </p>
-
-    <p>(foto's komen binnenkort)</p>
 {% endblock %}
