--- a/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
+++ b/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
@@ -7,7 +7,7 @@
     <h2>SinterKerstNieuwjaarsverschieting</h2>
 
     <p class="textwidth">
-        Op 9 januari was de grote SinterKerstNieuwjaarsverschieting bij
+        Op 9 januari 2011 was de grote SinterKerstNieuwjaarsverschieting bij
         Geronimo. Om half vier stond een grote groep schutters (bijna 20
         man) vol spanning aan de schietlijn te wachten op het startschot
         van de wedstrijd. Makkelijk was het niet: er moest met een
@@ -28,7 +28,7 @@
     </p>
 
     <p>
-        De foto's staan op de <a href="{% url '/fotos.html' %}">foto
-        pagina</a> onder 2011.
+        De foto's staan op de <a href="{% url '/fotos.html#2011/SinterKerstNieuwjaar' %}">foto
+        pagina</a>.
     </p>
 {% endblock %}
