--- a/pages/activiteiten/koningschieten.html
+++ b/pages/activiteiten/koningschieten.html
@@ -1,106 +1,56 @@
 {% extends "activiteiten_koningschieten.html" %}
 
 {% block body %}
-    <h2>Koningschieten</h2>
 
-    <p class='textwidth'>
-        Het Koningschieten is de wedstrijd van het jaar. De clubleden
-        strijden dan tegen elkaar. Er wordt geschoten in de klasses
-        traditioneel (30 en 20 meter), recurve en compound (50 en 30
-        meter) en jeugd (30 en 20 meter), elk onder verdeeld in heren en
-        vrouwen.
-    </p>
+{% filter markdown:'tables,markdown-in-html' %}
 
-    <p class='textwidth'>
-        De winnaar van een klasse krijgt de titel koning of koningin.
-        Indien iemand voor het derde jaar achtereen koning of koningin
-        is geworden, dan krijgt hij of zij de titel keizer of keizerin,
-        die behouden blijft totdat iemand anders drie jaar achtereen
-        wint.
-    </p>
+## Koningschieten
 
-    <h3>Huidige titelhouders</h3>
+<p class='textwidth'>
+    Het Koningschieten is de wedstrijd van het jaar. De clubleden
+    strijden dan tegen elkaar. Er wordt geschoten in de klasses
+    traditioneel (30 en 20 meter), recurve en compound (50 en 30
+    meter) en jeugd (30 en 20 meter), elk onder verdeeld in heren en
+    vrouwen.
+</p>
 
-    <table>
-        <tr>
-            <th colspan="3" style="width: 450px;">Klassement 2016</th>
-        </tr>
-        <tr>
-            <th style="width: 150px;">Klasse</th>
-            <th style="width: 150px;">Koning(in)</th>
-            <th style="width: 150px;">Keizer(in)</th>
-        </tr>
-        <tr>
-            <td>Recurve heren jeugd</td>
-            <td>Oscar Snijders</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Recurve heren</td>
-            <td>Bas Mol</td>
-            <td>Peter de Wilde</td>
-        </tr>
-        <tr>
-            <td>Recurve dames jeugd</td>
-            <td>Moira v. Uunen</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Recurve dames</td>
-            <td>Carola Blokker</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Compound heren jeugd</td>
-            <td>Martyn den Besten</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Compound heren</td>
-            <td>Jan van Doorn</td>
-            <td>Sander de Vries</td>
-        </tr>
-        <tr>
-            <td>Compound dames jeugd</td>
-            <td>-</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Compound dames</td>
-            <td>Françoise Weijters-Bage</td>
-            <td>Françoise Weijters-Bage</td>
-        </tr>
-        <tr>
-            <td>Barebow heren jeugd</td>
-            <td>Julan Wardenier</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Barebow heren</td>
-            <td>Danny Martherus</td>
-            <td>Arnold Dittmar</td>
-        </tr>
-        <tr>
-            <td>Barebow dames jeugd</td>
-            <td>Arwende Wardenier</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Barebow dames</td>
-            <td>Conny Buzink</td>
-            <td>Hetty van Eldijk</td>
-        </tr>
-    </table>
+<p class='textwidth'>
+    De winnaar van een klasse krijgt de titel koning of koningin.
+    Indien iemand voor het derde jaar achtereen koning of koningin
+    is geworden, dan krijgt hij of zij de titel keizer of keizerin,
+    die behouden blijft totdat iemand anders drie jaar achtereen
+    wint.
+</p>
 
-    <h3>Uitslagen</h3>
+### Huidige titelhouders
 
-    <ul>
-        <li><a href="{% url '/activiteiten/koningschieten/2016.html' %}">2016</a></li>
-        <li><a href="{% url '/activiteiten/koningschieten/2015.html' %}">2015</a></li>
-        <li><a href="{% url '/activiteiten/koningschieten/2014.html' %}">2014</a></li>
-        <li><a href="{% url '/activiteiten/koningschieten/2009.html' %}">2009</a></li>
-        <li><a href="{% url '/activiteiten/koningschieten/2007.html' %}">2007</a></li>
-        <li><a href="{% url '/activiteiten/koningschieten/2006.html' %}">2006</a></li>
-        <li><a href="{% url '/activiteiten/koningschieten/2005.html' %}">2005</a></li>
-    </ul>
+| Klasse               | Koning(in)              | Keizer(in)              |
+|----------------------|-------------------------|-------------------------|
+| Recurve heren jeugd  | Oscar Snijders          |                         |
+| Recurve heren        | Bas Mol                 | Peter de Wilde          |
+| Recurve dames jeugd  | Moira v. Uunen          |                         |
+| Recurve dames        | Carola Blokker          |                         |
+| Compound heren jeugd | Martyn den Besten       |                         |
+| Compound heren       | Jan van Doorn           | Sander de Vries         |
+| Compound dames jeugd |                         |                         |
+| Compound dames       | Françoise Weijters-Bage | Françoise Weijters-Bage |
+| Barebow heren jeugd  | Julan Wardenier         |                         |
+| Barebow heren        | Danny Martherus         | Arnold Dittmar          |
+| Barebow dames jeugd  | Arwende Wardenier       |                         |
+| Barebow dames        | Conny Buzink            | Hetty van Eldijk        |
+
+
+### Uitslagen
+
+- <a href="{% url '/activiteiten/koningschieten/2017.html' %}">2017</a>
+- <a href="{% url '/activiteiten/koningschieten/2016.html' %}">2016</a>
+- <a href="{% url '/activiteiten/koningschieten/2015.html' %}">2015</a>
+- <a href="{% url '/activiteiten/koningschieten/2014.html' %}">2014</a>
+- <a href="{% url '/activiteiten/koningschieten/2009.html' %}">2009</a>
+- <a href="{% url '/activiteiten/koningschieten/2007.html' %}">2007</a>
+- <a href="{% url '/activiteiten/koningschieten/2006.html' %}">2006</a>
+- <a href="{% url '/activiteiten/koningschieten/2005.html' %}">2005</a>
+
+{% endfilter %}
+
 {% endblock %}
