Remove old links from Links page, update verenigingen overview link.

--- a/pages/links.html
+++ b/pages/links.html
@@ -11,14 +11,13 @@
 
     <table valign="top"><tr>
         <td style="width: 300px">
-            <h5>Officiële website</h5>
+            <h5>Officiële websites</h5>
             <ul>
                 <li><a target="_blank" href="http://www.handboogsport.nl/">Nederlandse Handboog Bond</a></li>
                 <li><a target="_blank" href="http://www.archery.org/">FITA International Archery Federation</a></li>
                 <li><a target="_blank" href="http://www.olympic.org/archery">Olympic Archery</a></li>
                 <li><a target="_blank" href="http://www.usarchery.org/">US National Archery Association</a></li>
                 <li><a target="_blank" href="http://www.ifaa-archery.org/">International Field Archery Association</a></li>
-                <li><a target="_blank" href="http://www.face2face-archery.org/">Face 2 Face Archery</a></li>
             </ul>
 
             <h5>Andere verenigingen</h5>
@@ -31,7 +30,7 @@
                 <li><a target="_blank" href="http://www.eikelswordeneiken.nl/">Eikels worden Eiken</a></li>
                 <li><a target="_blank" href="http://www.ace-xclusive.nl/">A.C.E. X-Clusive</a></li>
                 <li><a target="_blank" href="http://www.brediusschutters.nl/">Brediusschutters</a></li>
-                <li><a target="_blank" href="http://www.handboogsport.nl/nhb/verenigingen/alle-verenigingen/">(overzicht Nederland)</a></li>
+                <li><a target="_blank" href="https://www.handboogsport.nl/contact/zoek-je-vereniging/">Overzicht alle verenigingen</a></li>
             </ul>
         </td>
         <td style="width: 240px">
@@ -64,9 +63,6 @@
             <h5>Overige</h5>
             <ul>
                 <li><a target="_blank" href="http://www.archery.tv">Archery TV</a></li>
-                <li><a target="_blank" href="http://handboog-schieten.jouwpagina.nl/">Handboogschieten jouwpagina</a></li>
-                <li><a target="_blank" href="http://handboog.startpagina.nl/">Handboogschieten startpagina</a></li>
-                <li><a target="_blank" href="http://www.archersreference.pwp.blueyonder.co.uk/">Archer's Reference</a></li>
             </ul>
         </td>
     </tr></table>
