Update current koning(in)/keizer(in) table.

--- a/pages/activiteiten/koningschieten.html
+++ b/pages/activiteiten/koningschieten.html
@@ -26,18 +26,18 @@
 
 | Klasse               | Koning(in)              | Keizer(in)              |
 |----------------------|-------------------------|-------------------------|
-| Recurve heren jeugd  | Oscar Snijders          |                         |
-| Recurve heren        | Bas Mol                 | Peter de Wilde          |
-| Recurve dames jeugd  | Moira v. Uunen          |                         |
-| Recurve dames        | Carola Blokker          |                         |
+| Recurve heren jeugd  | Olav Smits              |                         |
+| Recurve heren        | Pauli Sievinen          | Peter de Wilde          |
+| Recurve dames jeugd  | Maeike Maagdenberg      |                         |
+| Recurve dames        | Suus van Zorge          |                         |
 | Compound heren jeugd | Martyn den Besten       |                         |
-| Compound heren       | Jan van Doorn           | Sander de Vries         |
+| Compound heren       | Guus Schulz             | Sander de Vries         |
 | Compound dames jeugd |                         |                         |
 | Compound dames       | Françoise Weijters-Bage | Françoise Weijters-Bage |
 | Barebow heren jeugd  | Julan Wardenier         |                         |
-| Barebow heren        | Danny Martherus         | Arnold Dittmar          |
+| Barebow heren        | Winfrid v/d Kroef       | Arnold Dittmar          |
 | Barebow dames jeugd  | Arwende Wardenier       |                         |
-| Barebow dames        | Conny Buzink            | Hetty van Eldijk        |
+| Barebow dames        | Conny Buzink            | Conny Buzink            |
 
 
 ### Uitslagen
