Add years to activities to specify when they occurred. Fix width of text for 'veldschieten' and restructure slightly.

--- a/pages/activiteiten/veldschieten.html
+++ b/pages/activiteiten/veldschieten.html
@@ -5,19 +5,19 @@
 
 {% block body %}
     <h2>Workshop Veldschieten</h2>
-    <p>
-        Voor degene die nog nooit buiten hadden geschoten maar ook voor
+
+    <h4>2011</h4>
+
+    <p class="textwidth">
+        Op zondag 5 juni werd een workshop gehouden voor degene die nog
+        nooit buiten hadden geschoten, maar ook voor
         degene die dat al wel eens hadden gedaan werd er een workshop
         gehouden om daar wat meer vertrouwd mee te raken.
     </p>
 
-    <p>
+    <p class="textwidth">
         o.l.v. Shaun werd uitgelegd welke blazoenen er gebruikt dienen
         te worden op de verschillende afstanden etc. en werd er
         natuurlijk ook geschoten op verschillende afstanden.
-    </p>
-
-    <p>
-        De workshop werd gehouden op <b>zondag 5 juni</b>.
     </p>
 {% endblock %}
