--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,11 +18,11 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 21 januari, 2018</p>
+    <p style="font-style: italic;">Per 13 april, 2018</p>
 
     <ul>
         <li>
-            <a id="email_voorz" href="#">Jeffrey Maagdenberg</a> &ndash; voorzitter
+            <a id="email_voorz" href="#">[vacature]</a> &ndash; voorzitter
             <ul>
                 <li>Coördinator en aanspreekpunt voor instructeurs</li>
                 <li>Coördinatie demonstraties</li>
@@ -53,6 +53,7 @@
                 <li>Nieuwsbrief</li>
             </ul>
         </li>
+        <li>Thomas Coppens</li>
     </ul>
 
     <h2>Wilt u meer informatie?</h2>
