Update indoor opening period during summer.

--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -27,7 +27,7 @@
         <tr>
             <td style="width: 80px">maandag</td>
             <td style="width: 80px">19:30 - 21:30</td>
-            <td style="text-align: right;">1 juni - eind september</td>
+            <td style="text-align: right;">open tijdens zomer</td>
             <td></td>
         </tr>
         <tr class="faded">
@@ -45,13 +45,13 @@
         <tr>
             <td>donderdag</td>
             <td>19:30 - 21:30</td>
-            <td style="text-align: right;">open tijdens zomer</td>
+            <td style="text-align: right;">1 mei - eind september</td>
             <td></td>
         </tr>
         <tr>
             <td>vrijdag</td>
             <td>19:30 - 21:30</td>
-            <td style="text-align: right;">1 juni - eind september</td>
+            <td style="text-align: right;">1 mei - eind september</td>
             <td></td>
         </tr>
         <tr class="faded">
@@ -63,7 +63,7 @@
         <tr>
             <td>zondag</td>
             <td>14:00 - 16:00</td>
-            <td style="text-align: right;">1 juni - eind september</td>
+            <td style="text-align: right;">1 mei - eind september</td>
             <td></td>
         </tr>
     </table>
