Update text about membership prices.

--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -45,8 +45,7 @@
     </table>
 
     <p class="textwidth">
-        Deze prijzen (inclusief bondscontributie) zijn een indicatie,
-        mogelijk zijn deze inmiddels anders.<br>
+        Deze prijzen (inclusief bondscontributie) zijn een indicatie.<br>
         Het is mogelijk om deze contributie in termijnen te betalen.
     </p>
 {% endblock %}
