Add initial costs.

--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -30,6 +30,12 @@
         worden.
     </p>
 
+    <h4>Kosten</h4>
+
+    <p>
+        Eenmalige inschrijfkosten van €10,00.
+    </p>
+
     <table style="width: 250px;">
         <tr>
             <th colspan="2" style="text-align: center;">Jaarlijkse contributie</th>
