Indicate minimum age of 15 for traditional lessons. Also mention that the lessons take place on the outside shooting range.

--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -79,8 +79,8 @@
 <p class="textwidth">
     De cursus Traditioneel schieten (met houten boog zonder richtmiddelen)
     bestaat uit 3 lessen van twee uur en wordt één keer per jaar
-    georganiseerd en wel in <b>juni</b>. De groep bestaat uit maximaal 5
-    cursisten.
+    georganiseerd en wel in <b>juni</b>. In de zomer wordt de cursus buiten gegeven.
+    De groep bestaat uit maximaal 5 cursisten. De minimum leeftijd is 15 jaar.
 </p>
 
 <table style="width: 250px;">
@@ -90,7 +90,7 @@
         </th>
     </tr>
     <tr>
-        <td>Jeugd, 12 t/m 17 jaar</td>
+        <td>Jeugd, 15 t/m 17 jaar</td>
         <td>€40,00</td>
     </tr>
     <tr>
