--- a/pages/activiteiten/koningschieten.html
+++ b/pages/activiteiten/koningschieten.html
@@ -26,22 +26,23 @@
 
 | Klasse               | Koning(in)              | Keizer(in)              |
 |----------------------|-------------------------|-------------------------|
-| Recurve heren jeugd  | Olav Smits              |                         |
+| Recurve heren jeugd  | Pepijn                  |                         |
 | Recurve heren        | Pauli Sievinen          | Peter de Wilde          |
 | Recurve dames jeugd  | Maeike Maagdenberg      |                         |
-| Recurve dames        | Suus van Zorge          |                         |
+| Recurve dames        | Vehanoush               |                         |
 | Compound heren jeugd | Martyn den Besten       |                         |
 | Compound heren       | Guus Schulz             | Sander de Vries         |
 | Compound dames jeugd |                         |                         |
 | Compound dames       | Françoise Weijters-Bage | Françoise Weijters-Bage |
 | Barebow heren jeugd  | Julan Wardenier         |                         |
-| Barebow heren        | Winfrid v/d Kroef       | Arnold Dittmar          |
+| Barebow heren        | Sander                  | Arnold Dittmar          |
 | Barebow dames jeugd  | Arwende Wardenier       |                         |
-| Barebow dames        | Conny Buzink            | Conny Buzink            |
+| Barebow dames        | Daphne                  | Conny Buzink            |
 
 
 ### Uitslagen
 
+- <a href="{% url '/activiteiten/koningschieten/2018.html' %}">2018</a>
 - <a href="{% url '/activiteiten/koningschieten/2017.html' %}">2017</a>
 - <a href="{% url '/activiteiten/koningschieten/2016.html' %}">2016</a>
 - <a href="{% url '/activiteiten/koningschieten/2015.html' %}">2015</a>
