--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -15,7 +15,7 @@
     <h3>2018</h3>
 
     <ul>
-        <li>1 juli, zondag 13:00 - Koningsschieten (buitenveld)
+        <li>23 september, zondag 13:00 - Koningsschieten (binnen)
         <li>30 september, zondag 13:00 - Jaarafsluiting
         <li>16 december, zondag 13:00 - Kerstverschieting
     </ul>
