--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -53,7 +53,7 @@
 
 <p class="textwidth">
     Er zijn meerdere beginnerscursussen per jaar;
-    De eerste cursus van het jaar start op <strong>vrijdag 26 januari 2018</strong>.
+    De eerste cursus van het jaar start eind januari 2019.
 </p>
 
 <p class="textwidth">
