--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -35,17 +35,19 @@
     </p>
 
     <ul id="thumbnails" style="background-color:#fff; padding-left: 0px;">
-             <li class="thu" id="SHS_Geronimo_Zeist_131012" style="background:url('http://arne.delaat.net/Movies/thumbs/SHS_Geronimo_Zeist_131012.png');">
-        </li><li class="thu" id="iPad_111029_2" style="background:url('http://arne.delaat.net/Movies/thumbs/iPad_111029_2.jpg');">
-        </li><li class="thu" id="iPad_111029_1" style="background:url('http://arne.delaat.net/Movies/thumbs/iPad_111029_1.jpg');">
-        </li><li class="thu d80" id="D80_100816_3">
-        </li><li class="thu d80" id="D80_090906_2">
-        </li><li class="thu d80" id="D80_090906_1">
-        </li><li class="thu s60" id="S60_051218_1">
+             <li class="thu" id="SHS_Geronimo_Zeist_131012" style="background: url('http://arne.delaat.net/Movies/thumbs/SHS_Geronimo_Zeist_131012.png');" data-960 data-1920 data-audio>
+        </li><li class="thu" id="iPad_111029_2" style="background: url('http://arne.delaat.net/Movies/thumbs/iPad_111029_2.jpg');" data-960 data-1920 data-audio>
+        </li><li class="thu" id="iPad_111029_1" style="background: url('http://arne.delaat.net/Movies/thumbs/iPad_111029_1.jpg');" data-960 data-1920 data-audio>
+        </li><li class="thu d700" id="D700_D90_120524_1_2_3_4" data-960 data-1920>
+        </li><li class="thu d80" id="D80_100816_3" data-960>
+        </li><li class="thu d80" id="D80_090906_2" data-960>
+        </li><li class="thu d80" id="D80_090906_1" data-960>
+        </li><li class="thu s60" id="S60_051218_1" data-960>
+        </li>
     </ul>
 
     <div id="movie" style="background-color:#ffffff; height:665px;">
-        <img id="poster" class="showing" style="width: auto; margin:0px 235px;" alt="Click to play"
+        <img id="poster" class="showing" style="width: auto; margin: 0px 235px;" alt="Click to play"
              data-id="D80_090906_2" src="{% static '/static/images_filmpjes/clicktoplay.jpg' %}" />
         <video id="player"></video>
     </div>
