Update bestuur samenstelling.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,11 +18,11 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 13 april, 2018</p>
+    <p style="font-style: italic;">Per 29 oktober, 2018</p>
 
     <ul>
         <li>
-            <a id="email_voorz" href="#">[vacature]</a> &ndash; voorzitter
+            <a id="email_voorz" href="#">Wout van de Brug</a> &ndash; voorzitter
             <ul>
                 <li>Coördinator en aanspreekpunt voor instructeurs</li>
                 <li>Coördinatie demonstraties</li>
@@ -40,7 +40,7 @@
             </ul>
         </li>
         <li>
-            <a id="email_penni" href="#">Wout van de Brug</a> &ndash; penningmeester
+            <a id="email_penni" href="#">Thomas Coppens</a> &ndash; penningmeester
             <ul>
                 <li>Begroting</li>
                 <li>Financieel jaarverslag</li>
