Update externals links with rel="noreferrer". Remove target="_blank". Add Halloweenverschieting activity to 2018 calendar. Change http to https where supported. Update copyright year.

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -17,6 +17,7 @@
     <ul>
         <li>23 september, zondag 13:00 - Koningsschieten (binnen)
         <li>30 september, zondag 13:00 - Jaarafsluiting
+        <li>5 november, maandag 20:00 - Halloweenverschieting
         <li>16 december, zondag 13:00 - Kerstverschieting
     </ul>
 
@@ -32,6 +33,6 @@
     <h2>Externe wedstrijden (buiten onze club)</h2>
     <p>
         Voor een volledig overzicht, zie:
-        <a href="http://www.handboogsport.nl/evenementen/" target="_blank">Algemene Wedstrijdkalender NHB</a>
+        <a rel="noreferrer" href="https://www.handboogkalender.nl">Wedstrijdkalender NHB</a>
     </p>
 {% endblock %}
