--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -12,8 +12,8 @@
 <p class="textwidth">
     Geronimo verwelkomt graag aspirant leden. Bent u geïnteresseerd, dan
     kunt u één van onze cursussen volgen. Na de cursus kunt u
-    <a href="lidmaatschap.html">lid</a> worden om verder te kunnen blijven
-    schieten bij de club en mee te doen aan activiteiten.
+    <a href="{% url '/lidmaatschap.html' %}">lid</a> worden om verder te
+    kunnen blijven schieten bij de club en mee te doen aan activiteiten.
 </p>
 
 <hr>
