--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -16,7 +16,7 @@
         geopend is, in de zaal schieten. In het buitenseizoen krijgen ze
         toegang tot het <a href="{% url '/adres.html' %}">buitenveld</a>.
         Verder zijn leden van Geronimo ook automatisch lid van de
-        <a href="http://www.handboogsport.nl/" target="_blank">Nederlandse
+        <a rel="noreferrer" href="https://www.handboogsport.nl/">Nederlandse
         Handboogbond</a> (NHB), men krijgt dan het blad “Handboogsport”
         van de NHB, en men is hiermee ook direct WA-verzekerd tijdens
         training en wedstrijden.
