--- a/pages/links.html
+++ b/pages/links.html
@@ -13,62 +13,62 @@
         <td style="width: 300px">
             <h5>Officiële websites</h5>
             <ul>
-                <li><a target="_blank" href="http://www.handboogsport.nl/">Nederlandse Handboog Bond</a></li>
-                <li><a target="_blank" href="http://www.archery.org/">FITA International Archery Federation</a></li>
-                <li><a target="_blank" href="http://www.olympic.org/archery">Olympic Archery</a></li>
-                <li><a target="_blank" href="http://www.usarchery.org/">US National Archery Association</a></li>
-                <li><a target="_blank" href="http://www.ifaa-archery.org/">International Field Archery Association</a></li>
+                <li><a rel="noreferrer" href="https://www.handboogsport.nl/">Nederlandse Handboog Bond</a></li>
+                <li><a rel="noreferrer" href="https://www.archery.org/">FITA International Archery Federation</a></li>
+                <li><a rel="noreferrer" href="https://www.olympic.org/archery">Olympic Archery</a></li>
+                <li><a rel="noreferrer" href="https://www.usarchery.org/">US National Archery Association</a></li>
+                <li><a rel="noreferrer" href="https://www.ifaa-archery.org/">International Field Archery Association</a></li>
             </ul>
 
             <h5>Andere verenigingen</h5>
             <ul>
-                <li><a target="_blank" href="http://www.artemis79.nl/">Artemis'79</a></li>
-                <li><a target="_blank" href="http://www.ahv-centaur.nl/">AHV Centaur</a></li>
-                <li><a target="_blank" href="http://www.handboogschutterijalmere.nl/">Handboogschutterij Almere</a></li>
-                <li><a target="_blank" href="http://www.knhs-concordia.org/">K.N.H.S. Concordia</a></li>
-                <li><a target="_blank" href="http://www.sagittarius.utwente.nl/">Sagittarius Twente</a></li>
-                <li><a target="_blank" href="http://www.eikelswordeneiken.nl/">Eikels worden Eiken</a></li>
-                <li><a target="_blank" href="http://www.ace-xclusive.nl/">A.C.E. X-Clusive</a></li>
-                <li><a target="_blank" href="http://www.brediusschutters.nl/">Brediusschutters</a></li>
-                <li><a target="_blank" href="https://www.handboogsport.nl/contact/zoek-je-vereniging/">Overzicht alle verenigingen</a></li>
+                <li><a rel="noreferrer" href="http://www.artemis79.nl/">Artemis'79</a></li>
+                <li><a rel="noreferrer" href="http://www.ahv-centaur.nl/">AHV Centaur</a></li>
+                <li><a rel="noreferrer" href="https://www.hbsa.nl/">HandBoogSchutterij Almere</a></li>
+                <li><a rel="noreferrer" href="https://www.knhs-concordia.org/">K.N.H.S. Concordia</a></li>
+                <li><a rel="noreferrer" href="http://www.sagittarius.utwente.nl/">Sagittarius Twente</a></li>
+                <li><a rel="noreferrer" href="http://www.eikelswordeneiken.nl/">Eikels worden Eiken</a></li>
+                <li><a rel="noreferrer" href="http://www.ace-xclusive.nl/">A.C.E. X-Clusive</a></li>
+                <li><a rel="noreferrer" href="http://www.brediusschutters.nl/">Brediusschutters</a></li>
+                <li><a rel="noreferrer" href="https://www.handboogsport.nl/contact/zoek-je-vereniging/">Overzicht alle verenigingen</a></li>
             </ul>
         </td>
         <td style="width: 240px">
             <h5>Boog winkels</h5>
             <ul>
-                <li><a target="_blank" href="http://www.jvd.nl/">JVD</a></li>
-                <li><a target="_blank" href="http://www.vbs-archery.nl/">Van Buggenum Sports</a></li>
-                <li><a target="_blank" href="http://www.all-inn-traditional.nl/">All-Inn-Traditional</a></li>
-                <li><a target="_blank" href="http://www.fairbow.nl/">Fairbow</a></li>
-                <li><a target="_blank" href="http://www.europearchery.com/">Europe Archery</a></li>
-                <li><a target="_blank" href="https://www.3riversarchery.com/">3Rivers Archery</a></li>
-                <li><a target="_blank" href="http://www.bogensportwelt.de/">BogenSportWelt</a></li>
+                <li><a rel="noreferrer" href="http://www.jvd.nl/">JVD</a></li>
+                <li><a rel="noreferrer" href="http://www.vbs-archery.nl/">Van Buggenum Sports</a></li>
+                <li><a rel="noreferrer" href="http://www.all-inn-traditional.nl/">All-Inn-Traditional</a></li>
+                <li><a rel="noreferrer" href="http://www.fairbow.nl/">Fairbow</a></li>
+                <li><a rel="noreferrer" href="http://www.europearchery.com/">Europe Archery</a></li>
+                <li><a rel="noreferrer" href="https://www.3riversarchery.com/">3Rivers Archery</a></li>
+                <li><a rel="noreferrer" href="http://www.bogensportwelt.de/">BogenSportWelt</a></li>
             </ul>
 
             <h5>Boog merken</h5>
             <ul>
-                <li><a target="_blank" href="http://www.hoyt.com/">Hoyt</a></li>
-                <li><a target="_blank" href="http://www.win-archery.com/">WIN&amp;WIN</a></li>
-                <li><a target="_blank" href="http://www.samicksports.com/">Samick</a></li>
-                <li><a target="_blank" href="http://www.doosungarchery.co.kr/eng/">Cartel</a></li>
-                <li><a target="_blank" href="http://www.kayaarchery.com/">Kaya</a></li>
-                <li><a target="_blank" href="http://www.rytera.com/">Rytera</a></li>
-                <li><a target="_blank" href="http://www.bowtecharchery.com/">Bowtech</a></li>
-                <li><a target="_blank" href="http://www.sureloc.com/">Sure-loc</a></li>
-                <li><a target="_blank" href="http://www.pse-archery.com/">PSE</a></li>
-                <li><a target="_blank" href="http://www.bearpaw-products.com/">Bearpaw</a></li>
+                <li><a rel="noreferrer" href="http://www.hoyt.com/">Hoyt</a></li>
+                <li><a rel="noreferrer" href="http://www.win-archery.com/">WIN&amp;WIN</a></li>
+                <li><a rel="noreferrer" href="http://www.samicksports.com/">Samick</a></li>
+                <li><a rel="noreferrer" href="http://www.doosungarchery.co.kr/eng/">Cartel</a></li>
+                <li><a rel="noreferrer" href="http://www.kayaarchery.com/">Kaya</a></li>
+                <li><a rel="noreferrer" href="http://www.rytera.com/">Rytera</a></li>
+                <li><a rel="noreferrer" href="http://www.bowtecharchery.com/">Bowtech</a></li>
+                <li><a rel="noreferrer" href="http://www.sureloc.com/">Sure-loc</a></li>
+                <li><a rel="noreferrer" href="http://www.pse-archery.com/">PSE</a></li>
+                <li><a rel="noreferrer" href="http://www.bearpaw-products.com/">Bearpaw</a></li>
             </ul>
         </td>
         <td>
             <h5>Overige</h5>
             <ul>
-                <li><a target="_blank" href="http://www.archery.tv">Archery TV</a></li>
+                <li><a rel="noreferrer" href="http://www.archery.tv">Archery TV</a></li>
             </ul>
         </td>
     </tr></table>
 
     <h5>Persoonlijke website</h5>
     <ul>
-        <li><a target="_blank" href="http://arne.delaat.net/">153957 Photography</a></li>
+        <li><a rel="noreferrer" href="http://arne.delaat.net/">153957 Photography</a></li>
     </ul>
 {% endblock %}
