Update more external links from http to https.

--- a/pages/links.html
+++ b/pages/links.html
@@ -29,33 +29,33 @@
                 <li><a rel="noreferrer" href="http://www.sagittarius.utwente.nl/">Sagittarius Twente</a></li>
                 <li><a rel="noreferrer" href="http://www.eikelswordeneiken.nl/">Eikels worden Eiken</a></li>
                 <li><a rel="noreferrer" href="http://www.ace-xclusive.nl/">A.C.E. X-Clusive</a></li>
-                <li><a rel="noreferrer" href="http://www.brediusschutters.nl/">Brediusschutters</a></li>
+                <li><a rel="noreferrer" href="http://www.asvbredius.nl/schutters/">Brediusschutters</a></li>
                 <li><a rel="noreferrer" href="https://www.handboogsport.nl/contact/zoek-je-vereniging/">Overzicht alle verenigingen</a></li>
             </ul>
         </td>
         <td style="width: 240px">
             <h5>Boog winkels</h5>
             <ul>
-                <li><a rel="noreferrer" href="http://www.jvd.nl/">JVD</a></li>
-                <li><a rel="noreferrer" href="http://www.vbs-archery.nl/">Van Buggenum Sports</a></li>
-                <li><a rel="noreferrer" href="http://www.all-inn-traditional.nl/">All-Inn-Traditional</a></li>
+                <li><a rel="noreferrer" href="https://www.jvd-archery.nl/">JVD Archery</a></li>
+                <li><a rel="noreferrer" href="https://www.vbs-archery.nl/">Van Buggenum Sports</a></li>
+                <li><a rel="noreferrer" href="https://www.all-inn-traditional.nl/">All-Inn-Traditional</a></li>
                 <li><a rel="noreferrer" href="http://www.fairbow.nl/">Fairbow</a></li>
-                <li><a rel="noreferrer" href="http://www.europearchery.com/">Europe Archery</a></li>
+                <li><a rel="noreferrer" href="https://www.europearchery.com/">Europe Archery</a></li>
                 <li><a rel="noreferrer" href="https://www.3riversarchery.com/">3Rivers Archery</a></li>
-                <li><a rel="noreferrer" href="http://www.bogensportwelt.de/">BogenSportWelt</a></li>
+                <li><a rel="noreferrer" href="https://www.bogensportwelt.de/">BogenSportWelt</a></li>
             </ul>
 
             <h5>Boog merken</h5>
             <ul>
-                <li><a rel="noreferrer" href="http://www.hoyt.com/">Hoyt</a></li>
-                <li><a rel="noreferrer" href="http://www.win-archery.com/">WIN&amp;WIN</a></li>
+                <li><a rel="noreferrer" href="https://www.hoyt.com/">Hoyt</a></li>
+                <li><a rel="noreferrer" href="https://www.win-archery.com/">WIN&amp;WIN</a></li>
                 <li><a rel="noreferrer" href="http://www.samicksports.com/">Samick</a></li>
                 <li><a rel="noreferrer" href="http://www.doosungarchery.co.kr/eng/">Cartel</a></li>
                 <li><a rel="noreferrer" href="http://www.kayaarchery.com/">Kaya</a></li>
                 <li><a rel="noreferrer" href="http://www.rytera.com/">Rytera</a></li>
-                <li><a rel="noreferrer" href="http://www.bowtecharchery.com/">Bowtech</a></li>
-                <li><a rel="noreferrer" href="http://www.sureloc.com/">Sure-loc</a></li>
-                <li><a rel="noreferrer" href="http://www.pse-archery.com/">PSE</a></li>
+                <li><a rel="noreferrer" href="https://www.bowtecharchery.com/">Bowtech</a></li>
+                <li><a rel="noreferrer" href="https://www.feradyne.com/sure-loc/">Sure-loc</a></li>
+                <li><a rel="noreferrer" href="https://www.pse-archery.com/">PSE</a></li>
                 <li><a rel="noreferrer" href="http://www.bearpaw-products.com/">Bearpaw</a></li>
             </ul>
         </td>
