Pas aanpassingen toe, vervang 'u' door 'je', en pas sommige teksten aan.

--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -10,19 +10,19 @@
     <h2>Aanmeld formulier beginnerscursus</h2>
 
     <p>
-        Met dit formulier kunt u zich aanmelden voor de
+        Met dit formulier kun je je aanmelden voor de
         beginnerscursus.
     </p>
 
     <p>
         <b>Let op!</b> De aanmelding is niet direct definitief.<br>
-        Na de aanmelding zal via mail bevestigd worden of u inderdaad deel kunt nemen aan
+        Na de aanmelding zal via mail bevestigd worden of je inderdaad deel kunt nemen aan
         de cursus en hoe de betaling plaats moet vinden.
     </p>
 
     <p>
-        Na succesvolle aanmelding zal u een mail ontvangen met  meer informatie.
-        Mocht u na een week nog niets van ons gehoord hebben,
+        Na succesvolle aanmelding zal je een mail ontvangen met  meer informatie.
+        Mocht je na een week nog niets van ons gehoord hebben,
         neem dan contact op met de <a id="email_secre" href="#"><b>secretaris</b></a> voor meer informatie.
     </p>
 
