--- a/pages/adres.html
+++ b/pages/adres.html
@@ -10,24 +10,24 @@
     <h2>Adres en route</h2>
 
     <p>
-        Het adres voor zowel post als het verenigingsgebouw zelf is:<br>
+        Het adres voor het verenigingsgebouw is:<br>
         S.H.S. Geronimo<br>
         De Molenweg 28<br>
         3981 CC Bunnik
     </p>
 
-    <h3>Buitenveld</h3>
-
-    <p style="width:560px; font-weight: bold;">
-        Er mag alleen buiten geschoten worden als u binnen op goed
-        genoeg kan schieten (bijvoorbeeld gemiddeld een 7 op een 40cm
-        blazoen op 18m) in verband met veiligheid en zodat niet alle
-        tijd kwijt is aan het zoeken naar pijlen in het gras.
+    <p>
+        Post kan naar:<br>
+        S.H.S. Geronimo<br>
+        Sapoerahof 5<br>
+        3531 WJ Utrecht
     </p>
+
+    <h3>Buitenveld</h3>
 
     <p>
         Het buitenveld bevind zich bij de andere sportvelden naar Slot
-        Zeist, aan het Filosofenlaantje. Parkeer u auto bij de
+        Zeist, aan het Filosofenlaantje. Parkeer je auto bij de
         parkeerplaats aan de Zinzendorflaan, aangegeven met blauw, de
         route van de parkeerplaats tot het veld aangegeven met rood:
     </p>
