--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -66,8 +66,8 @@
 <h4>Les schema</h4>
 
 <p class="textwidth">
-    De 10 lessen worden gegeven op de vrijdag (elke week, voor 10 weken) van
-    20.30 tot 21.30 uur.<br>
+    De 10 lesuren worden gegeven op de vrijdag (elke week, voor 10 weken) van
+    20.45 tot 21.45 uur.<br>
     De lessen beginnen precies op de start tijd, graag willen we dan beginnen
     met de les, kom dus iets eerder om je boog alvast te pakken.
 </p>
@@ -77,13 +77,11 @@
 <h3>Aanmelden?</h3>
 
 <p class="textwidth">
-    U kunt zich aanmelden via
+    Je kunt je aanmelden via
     <a href="{% url '/aanmelden.html' %}"><b>dit formulier</b></a> op de
-    website. Daar moet u onder andere uw naam, adres, telefoonnummer en
-    email invullen, en kiezen aan welke beginnerscursus u mee wilt doen.
-    Om de inschrijving definitief te maken moet u de helft van het
-    cursus geld overmaken naar de Geronimorekening. Tijdens de cursus
-    krijgt u alle materiaal van de club, wel is het handig strakke
+    website. Daar moet je onder andere je naam, adres, telefoonnummer en
+    email invullen. Tijdens de cursus
+    krijg je alle materiaal van de club, wel is het handig strakke
     kleding aan te doen en makkelijke loop schoenen. Neem
     <a href="{% url '/contact.html' %}"><b>contact</b></a> op met de
     <a id="email_secre" href="#"><b>secretaris</b></a> voor meer informatie.
