--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,10 +46,10 @@
         </li>
     </ul>
 
-    <h2>Wilt u meer informatie?</h2>
+    <h2>Wil je meer informatie?</h2>
     <p>
-        Als u meer informatie wenst, zich in wilt schrijven als lid of
-        op wilt geven voor een cursus, kunt u contact opnemen met de secretaris.
+        Als je meer informatie wenst, je in wil schrijven als lid of
+        op wil geven voor een cursus, kun je contact opnemen met de secretaris.
     </p>
 
     <p>
@@ -60,7 +60,7 @@
     <h2>Website</h2>
 
     <p>
-        Indien u op- of aanmerkingen heeft over deze website, mail dan
+        Indien je op- of aanmerkingen hebt over deze website, mail dan
         naar: <a href="#" id="email_webma">Arne de Laat</a>.
     </p>
 {% endblock %}
