--- a/pages/geronimo.html
+++ b/pages/geronimo.html
@@ -40,11 +40,9 @@
         met vizier en stabilisatie. Tevens is er de compound bow, die
         wat korter is en voorzien is van katrollen aan het uiteinde van
         de werparmen, alsmede een vizier met vergrotende lens en soms
-        een of twee waterpassen. Ook in deze klasse hebben wij
-        gerenommeerde schutters in huis om u goed op te leiden. Met
-        traditionele bogen als de longbow, flatbow, ruiterboog en
-        composite bow wordt recentelijk ook meer geschoten bij onze
-        club.
+        een of twee waterpassen. Met traditionele bogen als de longbow,
+        flatbow, ruiterboog en composite bow wordt recentelijk ook meer
+        geschoten bij onze club.
     </p>
 
     <table><tr>
