--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -10,15 +10,15 @@
     <h2>Lidmaatschap</h2>
 
     <p class="textwidth">
-        Wie wil boogschieten bij Geronimo kan eerst gebruik maken van de
+        Wie wil boogschieten bij Geronimo moet eerst gebruik maken van de
         <a href="{% url '/beginnerscursus.html' %}">beginnerscursus</a>.
-        Daarna dient men lid te worden. Leden mogen, wanneer de zaal
-        geopend is, in de zaal schieten. In het buitenseizoen krijgen ze
-        toegang tot het <a href="{% url '/adres.html' %}">buitenveld</a>.
+        Daarna dien je lid te worden. Leden mogen, wanneer de zaal
+        geopend is, in de zaal schieten. Daarnaast kunnen leden het hele
+        jaar gebruik maken van het <a href="{% url '/adres.html' %}">buitenveld</a>.
         Verder zijn leden van Geronimo ook automatisch lid van de
         <a rel="noreferrer" href="https://www.handboogsport.nl/">Nederlandse
-        Handboogbond</a> (NHB), men krijgt dan het blad “Handboogsport”
-        van de NHB, en men is hiermee ook direct WA-verzekerd tijdens
+        Handboogbond</a> (NHB), je krijgt dan het blad “Handboogsport”
+        van de NHB, en je bent hiermee ook direct WA-verzekerd tijdens
         training en wedstrijden.
     </p>
 
@@ -26,8 +26,7 @@
         Leden van Geronimo worden geacht zelf hun materiaal te kopen.
         Het eerste halve jaar kan een nieuw lid een verenigingsboog
         huren. Daarna is het verplicht eigen materiaal aangeschaft te
-        hebben. In overleg kunnen er soms tweedehands bogen overgekocht
-        worden.
+        hebben.
     </p>
 
     <h4>Kosten</h4>
