--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -46,7 +46,7 @@
             <td>donderdag</td>
             <td>19:30 - 21:30</td>
             <td style="text-align: right;">1 mei - eind september</td>
-            <td></td>
+            <td>Eerst jeugd uur, daarna vrij schieten.</td>
         </tr>
         <tr>
             <td>vrijdag</td>
@@ -79,8 +79,9 @@
 
     <p class="textwidth">
         Het <a href="{% url '/adres.html' %}">buitenveld</a> is
-        gedurende de zomer geopend vanaf 1 april tot 1 oktober, daar
-        zijn verder geen vaste dagen of tijden aan verbonden, maar er is
-        wel een sleutel nodig om het veld op te kunnen.
+        het gehele jaar geopend, daar zijn verder geen vaste dagen of tijden
+        aan verbonden, maar er is wel een sleutel nodig om het veld op te
+        kunnen. Alleen volwassen leden krijgen een sleutel. De jeugd mag alleen
+        schieten als er een volwassen schutter op het veld aanwezig is.
     </p>
 {% endblock %}
